--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 JpegTurbo = "b835a17e-a41a-41e7-81f0-2f016b05efe0"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 StackViews = "cae243ae-269e-4f55-b966-ac2d0dc13c15"
+URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 
 [compat]
 DataDeps = "0.7"
@@ -16,4 +17,5 @@ ImageCore = "0.10"
 JpegTurbo = "0.1"
 MAT = "0.10"
 StackViews = "0.1"
+URIs = "1"
 julia = "1.6"
